--- a/Interactive-linear-regression.ipynb
+++ b/Interactive-linear-regression.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importing modules"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +23,7 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "from IPython.display import display\n",
-    "sns.set(rc={'figure.figsize':(15, 10)})\n",
+    "\n",
     "try:\n",
     "    import ipywidgets as widgets\n",
     "    from ipywidgets import interact, interact_manual\n",
@@ -28,23 +35,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generate and plot random data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate_random_linear_data(n_samples, n_features, noise, bias):\n",
     "    x, y = sklearn.datasets.make_regression(n_samples=n_samples, n_features=n_features, noise=noise, bias=bias)\n",
-    "#     plt.scatter(x.flatten(), y.flatten())\n",
-    "#     plt.title(\"Data generated\")\n",
-    "#     plt.xlabel(\"X\",fontsize=13)\n",
-    "#     plt.ylabel(\"y\",fontsize=13)\n",
     "    return x, y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,8 +62,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ML models"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,26 +80,34 @@
     "    plt.scatter(x, y, color='g')\n",
     "    plt.plot(x, model.predict(x), color='k')\n",
     "    \n",
-    "def fit_non_linear_model(x, y):\n",
+    "def fit_non_linear_model(x, y, degree):\n",
+    "    poly_features = PolynomialFeatures(degree = degree)\n",
     "    x_poly = poly_features.fit_transform(x)\n",
     "    poly_model = LinearRegression()  \n",
     "    poly_model.fit(x_poly, y)\n",
     "    pred = poly_model.predict(x_poly)\n",
     "    new_X, new_y = zip(*sorted(zip(x, pred))) # sort values for plotting\n",
-    "    plt.scatter(x, y)\n",
+    "    plt.scatter(x, y, color='g')\n",
     "    plt.plot(new_X, new_y, color='k')\n",
     "    "
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Playing with regression"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d22b59792f843adb0c1b51325f341e7",
+       "model_id": "f508c0f5056641cf996390efd26dafd0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -95,37 +120,22 @@
     }
    ],
    "source": [
+    "sns.set(rc={'figure.figsize':(15, 10)})\n",
     "@interact\n",
-    "def interact_and_plot(degree = (1, 3, 1), n_samples=(0, 1000, 1), n_features=(1,1,1), noise=(0,100,1), bias=(-100,100,1)):\n",
+    "def interact_and_plot(degree = (1, 3, 1), \n",
+    "                      n_samples=(0, 1000, 1), \n",
+    "                      n_features=(1,1,1), \n",
+    "                      noise=(0,100,1), \n",
+    "                      bias=(-100,100,1)\n",
+    "                     ):\n",
     "    x, y = generate_random_linear_data(n_samples=n_samples, n_features=n_features, noise=noise, bias=bias)\n",
     "    y = y**degree\n",
     "    if degree == 1:\n",
     "        fit_linear_model(x, y)\n",
     "    else:\n",
-    "        fit_non_linear_model(x, y)\n",
+    "        fit_non_linear_model(x, y, degree)\n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
